# EchoRift-C-

./: CMakeLists.txt  main.cpp
include/: Game.h  Player.h
include/components/: UiComponents.h
src/: Game.cpp  Player.cpp
